--- a/size/size3.html
+++ b/size/size3.html
@@ -6,17 +6,26 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"
             integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Size Calculator</h1>
-    <label>Length: </label><input id="length" type="number"/><br/>
-    <label>Width: </label><input id="width" type="number"/><br/>
-    <label>Height: </label><input id="height" type="number"/><br/>
-    <button onclick="area()">Area</button>
-    <button onclick="perimeter()">Perimeter</button>
-    <button onclick="volume()">Volume</button>
+    <label>Length: </label><input class="form-control" id="length" type="number"/><br/>
+    <label>Width: </label><input id="width" class="form-control" type="number"/><br/>
+    <label>Height: </label><input id="height" class="form-control" type="number"/><br/>
+    <button class="btn btn-primary" onclick="area()">Area</button>
+    <button class="btn btn-primary" onclick="perimeter()">Perimeter</button>
+    <button class="btn btn-primary" onclick="volume()">Volume</button>
     <br/>
-    <p id="answer"></p>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <div id="answer"></div>
+
+    </div>
     <script src="size3.js"></script>
     <script src="size-math.js"></script>
 </body>
